--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "init": "node build/init.js"
   },
   "dependencies": {
+    "http-server": "^0.11.1",
     "request": "^2.87.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
