--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-    "init": "node build/init.js"
+    "init": "node build/init.js&&http-server ./resource"
   },
   "dependencies": {
     "http-server": "^0.11.1",
