--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "dev": "webpack-dev-server --inline  --progress --open --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-    "init": "node build/init.js&&http-server ./resource"
+    "init": "node build/init.js&&node build/http-server.conf.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "commander": "^2.16.0",
     "http-server": "^0.11.1",
+    "node-cmd": "^3.0.0",
     "request": "^2.87.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "xeditor-convertor": "^1.0.35",
-    "xes_pixi_renderer": "^1.1.7",
-    "xes_canvas_renderer": "1.0.3"
+    "xes_canvas_renderer": "1.0.3",
+    "xes_pixi_renderer": "^1.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
