--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --inline --progress --open --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-    "init": "node build/init.js"
+    "res": "node build/init.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
