--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "commander": "^2.16.0",
+    "gsap": "^2.0.1",
     "http-server": "^0.11.1",
     "node-cmd": "^3.0.0",
+    "pixi-question-choice": "1.0.4",
     "request": "^2.87.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "xeditor-convertor": "^1.0.36",
-    "xes_pixi_renderer": "^1.1.9",
-    "xes_canvas_renderer": "1.0.5",
-    "pixi-question-choice": "1.0.4"
+    "xeditor-convertor": "^1.0.45",
+    "xes_canvas_renderer": "1.0.13",
+    "xes_pixi_renderer": "^1.1.13"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
