--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "xeditor-convertor": "^1.0.60",
-    "xes_pixi_renderer": "^1.1.9",
-    "xes_canvas_renderer": "1.0.5",
-    "xes-choice": "^1.0.7"
+    "xes_pixi_renderer": "^1.1.13",
+    "xes_canvas_renderer": "^1.0.13"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
