--- a/resource/moduleConfig.json
+++ b/resource/moduleConfig.json
@@ -1,12 +1,12 @@
 {
   "type": 0,
-  "stemText": 0,
-  "stemImage": 5,
+  "stemText": "stem_text",
+  "stemImage": "stem",
   "rightAnswer": [
-    2
+    "test_option1"
   ],
   "interference": [
-    4,
-    6
+    "test_option2",
+    "test_option3"
   ]
 }
