--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "commander": "^2.16.0",
     "http-server": "^0.11.1",
     "node-cmd": "^3.0.0",
+    "pixi-spine": "^1.5.16",
     "request": "^2.87.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "xeditor-convertor": "^1.0.60",
-    "xes_pixi_renderer": "^1.1.13",
-    "xes_canvas_renderer": "^1.0.13"
+    "xes_canvas_renderer": "^1.0.13",
+    "xes_pixi_renderer": "^1.1.13"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
