--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cli-color": "^1.2.0",
     "commander": "^2.16.0",
     "http-server": "^0.11.1",
+    "inquirer": "^6.1.0",
     "node-cmd": "^3.0.0",
     "pixi-spine": "^1.5.16",
     "request": "^2.87.0",
