--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "npm run dev",
     "build": "node build/build.js",
     "res": "node init",
-    "test": "webpack-dev-server --inline --config build/webpack.res.conf.js"
+    "test": "webpack-dev-server --inline --config build/webpack.res.conf.js",
+    "babel": "babel"
   },
   "dependencies": {
     "axios": "^0.18.0",
