add stages add init code

--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "axios": "^0.18.0",
     "cli-color": "^1.2.0",
     "cli-progress": "^2.0.0",
+    "ejs": "^2.6.1",
+    "ejs-loader": "^0.3.1",
+    "fs-extra": "^7.0.0",
     "http-server": "^0.11.1",
     "inquirer": "^6.1.0",
     "matter-js": "^0.14.2",
     "node-cmd": "^3.0.0",
     "pixi-spine": "^1.5.16",
     "request": "^2.87.0",
-    "tree-kill": "^1.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "xeditor-convertor": "^1.0.60",
-    "xes_canvas_renderer": "^1.0.13",
+    "xeditor-convertor": "^1.0.70",
+    "xes-choice": "^1.0.14",
+    "xes_canvas_renderer": "^1.0.18",
+    "xes_fillvacancy": "^1.0.9",
     "xes_pixi_renderer": "^1.1.13"
   },
   "devDependencies": {
