--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "inquirer": "^6.1.0",
     "matter-js": "^0.14.2",
     "node-cmd": "^3.0.0",
+    "pixi-sound": "^2.0.2",
     "pixi-spine": "^1.5.16",
     "request": "^2.87.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "xeditor-convertor": "^1.0.70",
-    "xes-choice": "^1.0.14",
+    "xeditor-convertor": "^1.0.79",
+    "xes-choice": "^1.0.15",
+    "xes_fillvacancy": "^1.0.13",
+    "xes-classification": "^1.0.9",
     "xes_canvas_renderer": "^1.0.18",
-    "xes_fillvacancy": "^1.0.9",
     "xes_pixi_renderer": "^1.1.13"
   },
   "devDependencies": {
