--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "xes_fillvacancy": "^1.0.13",
     "xes-classification": "^1.0.9",
     "xes_canvas_renderer": "^1.0.18",
-    "xes_pixi_renderer": "^1.1.13"
+    "xes_pixi_renderer": "^1.1.13",
+    "xes-submit": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
