--- a/package.json
+++ b/package.json
@@ -8,29 +8,22 @@
     "dev": "webpack-dev-server --inline --progress --open --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-    "res": "node init",
-    "test": "webpack-dev-server --inline --config build/webpack.res.conf.js",
-    "babel": "babel"
+    "res": "node init"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "cli-color": "^1.2.0",
     "cli-progress": "^2.0.0",
     "ejs": "^2.6.1",
-    "ejs-loader": "^0.3.1",
     "fs-extra": "^7.0.0",
     "http-server": "^0.11.1",
     "inquirer": "^6.1.0",
-    "matter-js": "^0.14.2",
-    "node-cmd": "^3.0.0",
-    "pixi-spine": "^1.5.16",
     "request": "^2.87.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "xeditor-convertor": "^1.0.70",
-    "xes-choice": "^1.0.14",
+    "xes-classification": "^1.0.8",
     "xes_canvas_renderer": "^1.0.18",
-    "xes_fillvacancy": "^1.0.9",
     "xes_pixi_renderer": "^1.1.13"
   },
   "devDependencies": {
