--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "xeditor-convertor": "^1.0.70",
-    "xes-classification": "^1.0.8",
+    "xes-classification": "^1.0.9",
+    "xes-pixi-audio": "^1.0.2",
     "xes_canvas_renderer": "^1.0.18",
     "xes_pixi_renderer": "^1.1.13"
   },
