fix init function

--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "node-cmd": "^3.0.0",
     "pixi-sound": "^2.0.2",
     "request": "^2.87.0",
+    "undefined": "^0.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "xeditor-convertor": "^1.0.79",
+    "xes-classification": "^1.0.9",
+    "xes-ligature": "^1.0.9",
+    "xes-pixi-audio": "^1.0.2",
+    "xes-submit": "^1.0.1",
     "xes_canvas_renderer": "^1.0.18",
     "xes_pixi_renderer": "^1.1.13"
   },
